@@ -68,3 +68,7 @@
 25/4/2017 (4) (Sam Wong)
 -Minor bug fixes in current pages
 --Remove the "Sign up" tag from template
+
+28/4/2017 (Sam Wong)
+-Year of publishing fleid andded in the search page
+-About up heading change
